<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_reset2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#14000000"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/set_b_export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/export"
        app:layout_constraintBottom_toBottomOf="@+id/button_reset2"
        app:layout_constraintEnd_toStartOf="@+id/button_reset2"
        app:layout_constraintTop_toTopOf="@+id/button_reset2" />

    <Button
        android:id="@+id/set_b_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/importt"
        app:layout_constraintBottom_toBottomOf="@+id/set_b_export"
        app:layout_constraintEnd_toStartOf="@+id/set_b_export"
        app:layout_constraintTop_toTopOf="@+id/set_b_export" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="20pt"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/reset_skill"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/set_b_resetSkill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="20pt"
        android:layout_marginTop="8dp"
        android:text="@string/set_skill_to_max"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="20pt"
        android:layout_marginTop="8dp"
        android:text="@string/description_max_Skill"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="20pt"
        android:layout_marginTop="16dp"
        android:text="@string/description_max_voc_to_learn"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_class"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/set_b_resetSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/set_b_cheat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cheat"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/set_b_resetSkill"
        app:layout_constraintStart_toStartOf="@+id/set_b_resetSkill"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/set_et_increase"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoText="false"
        android:ems="10"
        android:gravity="center"
        android:hint="2"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/set_b_cheat"
        app:layout_constraintStart_toStartOf="@+id/set_b_cheat"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/set_et_decrease"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="center"
        android:hint="4"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/set_et_increase"
        app:layout_constraintStart_toStartOf="@+id/set_et_increase"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/set_b_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/polizeiblau"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_spin_class" />

    <Spinner
        android:id="@+id/set_spin_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/set_et_decrease"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/set_tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="unknown"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/button_reset2"
        app:layout_constraintEnd_toEndOf="@+id/button_reset2" />

</androidx.constraintlayout.widget.ConstraintLayout>