<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="deftrainer.example.definitionstrainer.Activities.MainActivity">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="255dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/a_picture_with_questionmarks"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ideebild" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00000000"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage">

        <Button
            android:id="@+id/fba_b_alleDefinitionen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4pt"
            android:layout_weight="1"
            android:background="@color/polizeiblau"
            android:text="@string/train"
            android:textSize="14sp" />

        <Button
            android:id="@+id/ma_b_hinzufuegen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4pt"
            android:layout_weight="1"
            android:text="@string/create"
            android:textSize="14sp" />

        <Button
            android:id="@+id/ma_b_suchen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4pt"
            android:layout_weight="1"
            android:text="@string/search"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_einstellungen"
        android:layout_width="25pt"
        android:layout_height="25pt"
        android:layout_margin="4pt"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="@android:drawable/ic_menu_manage"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button_about"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="25pt"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@android:drawable/ic_menu_info_details"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_einstellungen"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/button_einstellungen" />

</androidx.constraintlayout.widget.ConstraintLayout>