<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/check1"
                android:layout_width="wrap_content"
                android:layout_height="4pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#DFDFDF"
                android:gravity="center" />

            <TextView
                android:id="@+id/check2"
                android:layout_width="wrap_content"
                android:layout_height="4pt"
                android:layout_marginLeft="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#DFDFDF"
                android:gravity="center" />

            <TextView
                android:id="@+id/check3"
                android:layout_width="wrap_content"
                android:layout_height="4pt"
                android:layout_marginLeft="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#DFDFDF"
                android:gravity="center" />

            <TextView
                android:id="@+id/check4"
                android:layout_width="wrap_content"
                android:layout_height="4pt"
                android:layout_marginLeft="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#DFDFDF"
                android:gravity="center" />

            <TextView
                android:id="@+id/check5"
                android:layout_width="wrap_content"
                android:layout_height="4pt"
                android:layout_marginLeft="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#DFDFDF"
                android:gravity="center" />

            <TextView
                android:id="@+id/check6"
                android:layout_width="wrap_content"
                android:layout_height="4pt"
                android:layout_marginLeft="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#DFDFDF"
                android:gravity="center" />

            <TextView
                android:id="@+id/check7"
                android:layout_width="wrap_content"
                android:layout_height="4pt"
                android:layout_marginLeft="1pt"
                android:layout_weight="1"
                android:background="#DFDFDF"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_definition_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/definition"
            android:textColor="#050505"
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tetView_definition_definition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:text="@string/larum_ipsum"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/af_tv_fach"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="2"
                android:text="@string/subject" />

            <TextView
                android:id="@+id/textView_skillLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="\?/\?" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/button_aufloesen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/show"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/button_bessernochmal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1pt"
                    android:layout_marginRight="1pt"
                    android:layout_weight="1"
                    android:background="#81FF0000"
                    android:text="@string/better_repeat" />

                <Button
                    android:id="@+id/button_konnteIch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1pt"
                    android:layout_marginLeft="1pt"
                    android:layout_weight="1"
                    android:background="#7C08F600"
                    android:text="@string/solved_it" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>